--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Sarah Freitas Fotografia</title>
+    <title>Sarah Heloísa Fotografia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
